--- a/Dream/Dream/Views/HomeEmpleado/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpleado/Index.cshtml
@@ -134,8 +134,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoria encontramos encontramos encargados de marketing, coordinador de mercadeo, auxiliar de control de inventarios...
                     </p>
                 </div>
 
@@ -160,8 +159,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoría encontramos trabajos como programadores, soporte técnico, ingeniros en redes, analistas de sistemas...
                     </p>
                 </div>
 
@@ -191,8 +189,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoria clasifican diversos empleos enfatisando el talento, eficiencia  como  vendedores pre-venta, cocineros, policías...
                     </p>
                 </div>
 
@@ -217,8 +214,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        Esta categoria engloba empleos como contadores, auxiliar contable, coordinador de creditos y cobro, analista de operaciones de liquidacion...
                     </p>
                 </div>
 
@@ -248,8 +244,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En la categoria salud encontramos empleos de Médicos, enfermeras, auxiliar de enfermeras, cirujanos, nutricionistas... 
                     </p>
                 </div>
 
@@ -274,8 +269,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoria encontramos empleos como albañiles, carpinteros, fontaneros, electricistas, arquitectos, ingenieros civiles...
                     </p>
                 </div>
 
