--- a/Dream/Dream/Views/HomeEmpresa/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpresa/Index.cshtml
@@ -131,8 +131,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoria encontramos encontramos encargados de marketing, coordinador de mercadeo, auxiliar de control de inventarios...
                     </p>
                 </div>
 
@@ -157,8 +156,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoría encontramos trabajos como programadores, soporte técnico, ingeniros en redes, analistas de sistemas...
                     </p>
                 </div>
 
@@ -188,8 +186,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoria clasifican diversos empleos enfatisando el talento, eficiencia  como  vendedores pre-venta, cocineros, policías...
                     </p>
                 </div>
 
@@ -214,8 +211,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        Esta categoria engloba empleos como contadores, auxiliar contable, coordinador de creditos y cobro, analista de operaciones de liquidacion...
                     </p>
                 </div>
 
@@ -245,8 +241,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En la categoria salud encontramos empleos de Médicos, enfermeras, auxiliar de enfermeras, cirujanos, nutricionistas...
                     </p>
                 </div>
 
@@ -271,8 +266,7 @@
 
                     </div>
                     <p class="text-light fs-mini m">
-                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
-                        thoughts, ideas.
+                        En esta categoria encontramos empleos como albañiles, carpinteros, fontaneros, electricistas, arquitectos, ingenieros civiles...
                     </p>
                 </div>
 
