--- a/Dream/Dream/Views/Login/Index.cshtml
+++ b/Dream/Dream/Views/Login/Index.cshtml
@@ -62,7 +62,7 @@
 
             #msj {
                 text-align: center;
-                color: #fff;
+                color: #ff0000;
             }
 
             .p-container {
