--- a/Dream/Dream/Views/Shared/_Layout.cshtml
+++ b/Dream/Dream/Views/Shared/_Layout.cshtml
@@ -75,6 +75,14 @@
             </li>
             <li class="has-subnav">
                 <span class="nav-text">
+                    <img src="~/Content/img/aplicantes.png" width="30" />
+                    @Html.ActionLink("Aplicantes", "IndexEmpresa", "Aplicaciones")
+
+                </span>
+                <br />
+            </li>
+            <li class="has-subnav">
+                <span class="nav-text">
                     <img src="~/Content/img/user.png" width="30" />
                     @Html.ActionLink("Contacto", "Contact", "Home")
                 </span>
