--- a/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
+++ b/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
@@ -70,6 +70,14 @@
                     <img src="~/Content/img/user.png" width="30" />
                     @Html.ActionLink("Contacto", "Contact", "Home")
                 </span>
+                <br />
+            </li>
+            <li class="has-subnav">
+                <span class="nav-text">
+                    <img src="~/Content/img/oferta1.png" width="30" />
+                    @Html.ActionLink("Aplicaciones", "Index", "Aplicaciones")
+                </span>
+                <br />
             </li>
 
         </ul>
