--- a/Dream/Dream/Views/Aplicaciones/IndexEmpresa.cshtml
+++ b/Dream/Dream/Views/Aplicaciones/IndexEmpresa.cshtml
@@ -51,7 +51,7 @@
                     @Html.DisplayFor(modelItem => item.OfertaEmpleo.DatosEmpresa.telefono)
                 </td>
                 <td>
-                    @Html.ActionLink("Detalles", "Datails", new { id = item.idAplicacion })
+                    @Html.ActionLink("Detalles", "DetallesOferta", new { id = item.idAplicacion })
                 </td>
                 <td>
                     @Html.ActionLink("Delete", "Eliminar", new { id = item.idAplicacion })
