--- a/Dream/Dream/Views/Curriculu/Index2.cshtml
+++ b/Dream/Dream/Views/Curriculu/Index2.cshtml
@@ -3,6 +3,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
+    .search-form {
+        margin-top: 20px;
+    }
+    table {
+        margin-top: 20px;
+        background-color: white;
+    }
+    body {
+        background-color: #254B5E;
+    }
     .table-container {
         margin: 20px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -41,6 +51,9 @@
 <div class="table-container">
     <div class="table-header">
         <h2>Todos los Usuarios</h2>
+        
+            
+     
 
     </div>
     <form class="search-form" method="get" action="@Url.Action("Index2", "Curriculu")">
