--- a/Dream/Dream/Views/Shared/_Layout.cshtml
+++ b/Dream/Dream/Views/Shared/_Layout.cshtml
@@ -60,16 +60,9 @@
             </li>
             <li class="has-subnav">
                 <span class="nav-text">
-                    <img src="~/Content/img/aplicantes.png" width="30" />
+                    <img src="~/Content/img/personas.png" width="30" />
                     @Html.ActionLink("F. Empleados", "Index2", "Curriculu")
 
-                </span>
-                <br />
-            </li>
-            <li class="has-subnav">
-                <span class="nav-text">
-                    <img src="~/Content/img/user.png" width="30" />
-                    @Html.ActionLink("Perfil", "Details", "DatosEmpresas")
                 </span>
                 <br />
             </li>
@@ -84,7 +77,14 @@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/user.png" width="30" />
-                    @Html.ActionLink("Contacto", "Contact", "Home")
+                    @Html.ActionLink("Perfil", "Details", "DatosEmpresas")
+                </span>
+                <br />
+            </li>
+            <li class="has-subnav">
+                <span class="nav-text">
+                    <img src="~/Content/img/contacto.png" width="30" />
+                    @Html.ActionLink("Contacto", "Contact", "Shared")
                 </span>
             </li>
 
