--- a/Dream/Dream/Views/Aplicaciones/DetallesOferta.cshtml
+++ b/Dream/Dream/Views/Aplicaciones/DetallesOferta.cshtml
@@ -6,22 +6,226 @@
 
 <!DOCTYPE html>
 
-<html>
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Details</title>
 </head>
+
+
+<!-- Link hacia el archivo de estilos css -->
+
+<link rel="stylesheet" href="css/Details.css">
+<style type="text/css">
+</style>
+@Styles.Render("~/Content/Details.css")
+<script type="text/javascript"></script>
+
+
+
 <body>
-    <div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="profile-card-4 z-depth-3">
+                    <div class="card">
+                        <div class="card-body text-center bg-primary rounded-top">
+                            <div class="user-box">
+                                <img src="https://img.icons8.com/3d-fluency/94/user-group-man-woman--v2.png" alt="user avatar">
+                            </div>
+                            <h5 class="mb-1 text-white"> Datos Aplicante</h5>
+                           
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group shadow-none">
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-envelope"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span> @Html.DisplayFor(model => model.Curriculum.nombre)</span>
+                                        <small>Nombre</small>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-phone-square"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span> @Html.DisplayFor(model => model.Curriculum.apellido)</span>
+                                        <small>Apellido</small>
+                                    </div>
+
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-envelope"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span> @Html.DisplayFor(model => model.Curriculum.telefono)</span>
+                                        <small>Telefono</small>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-envelope"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span>@Html.DisplayFor(model => model.Curriculum.correoOpc)</span>
+                                        <small>Email </small>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-globe"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span>@Html.DisplayFor(model => model.Curriculum.nivelAcademico)</span>
+                                        <small>Nivel academico</small>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-globe"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span>@Html.DisplayFor(model => model.Curriculum.licencia)</span>
+                                        <small>Licencia</small>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-globe"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span>@Html.DisplayFor(model => model.Curriculum.segundoIdioma)</span>
+                                        <small>Segundo idioma</small>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="list-icon">
+                                        <i class="fa fa-globe"></i>
+                                    </div>
+                                    <div class="list-details">
+                                        <span>@Html.DisplayFor(model => model.Curriculum.direccion)</span>
+                                        <small>Direcccion</small>
+                                    </div>
+                                </li>
+                            </ul>
+                            
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="card z-depth-3">
+                    <div class="card-body">
+                        <ul class="nav nav-pills nav-pills-primary nav-justified">
+                            <li class="nav-item">
+                                <a href="javascript:void();" data-target="#profile" data-toggle="pill" class="nav-link active show"><i class="icon-user"></i> <span class="hidden-xs">Detalles de aplicacion</span></a>
+                            </li>
+
+                        </ul>
+                        <div class="tab-content p-3">
+                            <div class="tab-pane active show" id="profile">
+                                <h5 class="mb-3">Datos Empresa</h5>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h6>nombre empresa</h6>
+                                        <p>
+                                            @Html.DisplayFor(model => model.OfertaEmpleo.DatosEmpresa.nombre)
+                                        </p>
+                                        <h6>Direccion</h6>
+                                        <p>
+                                            @Html.DisplayFor(model => model.OfertaEmpleo.DatosEmpresa.direccion)
+                                        </p>
+                                        <h6>Licencia</h6>
+                                        <p>
+                                            @Html.DisplayFor(model => model.OfertaEmpleo.DatosEmpresa.licencia)
+                                        </p>
+                                        <h6>Telefono</h6>
+                                        <p>
+                                            @Html.DisplayFor(model => model.OfertaEmpleo.DatosEmpresa.telefono)
+                                        </p>
+
+                                    </div>
+
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="card z-depth-3">
+                        <div class="card-body">
+                            <ul class="nav nav-pills nav-pills-primary nav-justified">
+                                <li class="nav-item">
+                                    <a href="javascript:void();" data-target="#profile" data-toggle="pill" class="nav-link active show"><i class="icon-user"></i> <span class="hidden-xs">Datos oferta de empleo</span></a>
+                                </li>
+
+                            </ul>
+                            <div class="tab-content p-3">
+                                <div class="tab-pane active show" id="profile">
+                                    <h5 class="mb-3">Datos oferta de empleo</h5>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h6>Oferta de empleo</h6>
+                                            <p>
+                                                @Html.DisplayFor(model => model.OfertaEmpleo.nombre)
+                                            </p>
+                                            <h6>Requeriminetos</h6>
+                                            <p>
+                                                @Html.DisplayFor(model => model.OfertaEmpleo.requerimientos)
+                                            </p>
+                                            <h6>Vacantes</h6>
+                                            <p>
+                                                @Html.DisplayFor(model => model.OfertaEmpleo.nVacantes)
+                                            </p>
+                                            <h6>Categoria</h6>
+                                            <p>
+                                                @Html.DisplayFor(model => model.OfertaEmpleo.Categoria.nombre)
+                                            </p>
+
+                                        </div>
+
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    @*<div>
         <h4>Aplicacion</h4>
-        <hr />
+
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.Curriculum.nombre)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.Curriculum.nombre)
+                @Html.DisplayFor(model => model.Curriculum.apellido)
             </dd>
 
             <dt>
@@ -36,7 +240,7 @@
     </div>
     <p>
         @Html.ActionLink("Atras", "IndexEmpresa")
-    </p>
+    </p>*@
 </body>
-</html>
+
 
