--- a/Dream/Dream/Views/Shared/_Layout.cshtml
+++ b/Dream/Dream/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/contacto.png" width="30" />
-                    @Html.ActionLink("Contacto", "Contact", "Shared")
+                    @Html.ActionLink("Contacto", "ContactoEmpresa", "Home")
                 </span>
             </li>
 
