--- a/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
+++ b/Dream/Dream/Views/Shared/_LayoutEmpleado.cshtml
@@ -75,7 +75,7 @@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/contacto.png" width="30" />
-                    @Html.ActionLink("Contacto", "Contact", "Shared")
+                    @Html.ActionLink("Contacto", "ContactoEmpleado", "Home")
                 </span>
                 <br />
             </li>
