--- a/Dream/Dream/Content/HomeEmpleado.css
+++ b/Dream/Dream/Content/HomeEmpleado.css
@@ -281,9 +281,21 @@ body {
             font-size: 13px;
             border-radius: 6px;
             color: inherit;
-            background-color: #7fd5ff;
             text-decoration: none;
+            background: linear-gradient(#0039ae, #096bb5);
+            border: 2px solid #0058e6;
+            border-radius: 10px 10px 12px 12px;
+            box-shadow: 2px 2px 2px 2px #024b83;
+            transition: all 0.3s;
         }
+
+            .tags > li > a:hover {
+                color: #ffffff;
+                background-color: #62afd0;
+                border: 2px solid #00779e;
+                border-radius: 16px 5px 16px 5px;
+                box-shadow: 3px 3px 3px 3px #08657d;
+            }
 
 .mt-sm {
     margin-top: 10px;
