--- a/Dream/Dream/Views/OfertaEmpleos/Create.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Create.cshtml
@@ -117,7 +117,7 @@
 
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-10">
-                                        <input type="submit" value="Create" class="btn btn-primary btn3d btn-info" />
+                                        <input type="submit" value="Create" class="btn-edeptec" />
                                     </div>
                                 </div>
                             </div>
