--- a/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
@@ -208,7 +208,7 @@
         </dl>
     </div>*@
 <p>
-    @Html.ActionLink("Eliminar", "DeleteConfirmed", new { id = Model.idOfertaEmpleo }) |
+    @Html.ActionLink("Eliminar", "desactivar", new { id = Model.idOfertaEmpleo }) |
     @Html.ActionLink("Edit", "Edit", new { id = Model.idOfertaEmpleo }) |
     @Html.ActionLink("Back to List", "TodasLasOfertas")
 </p>
