--- a/Dream/Dream/Content/Apindex.css
+++ b/Dream/Dream/Content/Apindex.css
@@ -1,6 +1,6 @@
-﻿body {
+﻿.body {
     margin-top: 20px;
-    background-color: #254B5E;
+    background-color: #0A0D21;
 }
 
 .project-list-table {
