--- a/Dream/Dream/Content/Curri.css
+++ b/Dream/Dream/Content/Curri.css
@@ -2,7 +2,7 @@
     margin-top: 20px;
     color: #1a202c;
     text-align: left;
-    background-color: #254B5E;
+    background-color: #0A0D21;
 }
 
 .main-body {
