--- a/Dream/Dream/Content/HomeEmpleado.css
+++ b/Dream/Dream/Content/HomeEmpleado.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color: #254B5E;
+    background-color: #0A0D21;
     color: #254B5E;
 }
 
@@ -7,7 +7,7 @@
 body {
     margin-top: 20px;
     background: #315e7e;
-    background-color: #254B5E;
+    background-color: #0A0D21;
 }
 
 .db-social .jumbotron {
