--- a/Dream/Dream/Content/Site.css
+++ b/Dream/Dream/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-color: #254B5E;
+    background-color: #0A0D21;
 }
 
 /* Set padding to keep content from hitting the edges */
