--- a/Dream/Dream/Content/CreateE.css
+++ b/Dream/Dream/Content/CreateE.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding-top: 40px;
     color: #2e323c;
-    background: #254B5E;
+    background: #0A0D21;
     position: relative;
     height: 100%;
 }
