--- a/Dream/Dream/Content/DetallesOfer.css
+++ b/Dream/Dream/Content/DetallesOfer.css
@@ -49,7 +49,7 @@ html {
 
 body {
     font-family: var(--font-base-family, sans-serif);
-    background: var(--color-grey);
+    background: #0A0D21;
     color: var(--color-text);
     padding: var(--metric-gutter, 2rem);
 }
