--- a/Dream/Dream/Views/Curriculu/Index2.cshtml
+++ b/Dream/Dream/Views/Curriculu/Index2.cshtml
@@ -11,7 +11,7 @@
         background-color: white;
     }
     body {
-        background-color: #254B5E;
+        background-color: #0A0D21;
     }
     .table-container {
         margin: 20px;
