--- a/Dream/Dream/Content/Apindex.css
+++ b/Dream/Dream/Content/Apindex.css
@@ -1,8 +1,4 @@
-﻿.body {
-    margin-top: 20px;
-    background-color: #0A0D21;
-}
-
+﻿
 .project-list-table {
     border-collapse: separate;
     border-spacing: 0 12px
