--- a/Dream/Dream/Content/HomeEmpresa.css
+++ b/Dream/Dream/Content/HomeEmpresa.css
@@ -1,12 +1,9 @@
-﻿/*.body {
-    background-color: #0A0D21;
-    color: #254B5E;
-}*/
+﻿
 
 
 body {
     margin-top: 20px;
-    background: #315e7e;
+    background: #0A0D21;
 }
 
 .db-social .jumbotron {
