--- a/Dream/Dream/Views/Aplicaciones/IndexEmpresa.cshtml
+++ b/Dream/Dream/Views/Aplicaciones/IndexEmpresa.cshtml
@@ -70,7 +70,7 @@
                                                 @Html.ActionLink("Detalles", "DetallesOferta", new { id = item.idAplicacion })
                                             
                                             </td>
-                                            <td> @Html.ActionLink("Delete", "Eliminar", new { id = item.idAplicacion })</td>
+                                            <td> @Html.ActionLink("Eliminar", "Eliminar", new { id = item.idAplicacion })</td>
 
                                         </tr>
 
