--- a/Dream/Dream/Views/Curriculu/DetailsEmpleado.cshtml
+++ b/Dream/Dream/Views/Curriculu/DetailsEmpleado.cshtml
@@ -143,7 +143,7 @@
     </div>
     <p>
         @Html.ActionLink("Atras", "Index", "HomeEmpleado", null, new { @class = "btn btn-blanco" })
-        @Html.ActionLink("Edit", "Edit", new { id = Model.idCurriculum }) 
+        @Html.ActionLink("Editar", "Edit", new { id = Model.idCurriculum }) 
     </p>
 
 </body>
