--- a/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
@@ -209,6 +209,6 @@
     </div>*@
 <p>
     @Html.ActionLink("Eliminar", "desactivar", new { id = Model.idOfertaEmpleo }) |
-    @Html.ActionLink("Edit", "Edit", new { id = Model.idOfertaEmpleo }) |
-    @Html.ActionLink("Back to List", "TodasLasOfertas")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.idOfertaEmpleo }) |
+    @Html.ActionLink("Atras", "TodasLasOfertas")
 </p>
